--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	"devDependencies": {
 		"@types/react": "^16.9.23",
 		"@types/react-dom": "^16.9.5",
+		"eslint": "^6.8.0",
+		"eslint-plugin-jest": "^23.8.2",
 		"prettier": "^1.19.1",
 		"typescript": "^3.8.3"
 	}
