--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,6 @@
 	"semi": false,
 	"singleQuote": true,
 	"tabWidth": 2,
-	"trailingComma": 'es5',
-	"useTabs": true,
+	"trailingComma": "es5",
+	"useTabs": true
 }
