--- a/package.json
+++ b/package.json
@@ -36,7 +36,18 @@
 		"@types/react-dom": "^16.9.5",
 		"eslint": "^6.8.0",
 		"eslint-plugin-jest": "^23.8.2",
+		"husky": "^4.2.3",
+		"lint-staged": "^10.0.8",
 		"prettier": "^1.19.1",
 		"typescript": "^3.8.3"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{js,ts,tsx}": "eslint --cache --fix",
+		"*.{js,ts,tsx,json,css,md}": "prettier --write"
 	}
 }
